# vanguard-c2

./: .dockerignore  .gitignore  AGENTS.md  CHALLENGE.md  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  nats.conf
interceptor/: Cargo.toml
solver/: README.md  requirements.txt  solver.py
src/: main.rs  models.rs  orchestrator.rs  orders.rs
vanguard-control/: Cargo.toml
vanguard-control/src/: engagement.rs  fusion.rs  main.rs  solver.rs
vanguard-core/: Cargo.toml
vanguard-core/src/: control.rs  events.rs  interceptor.rs  lib.rs  position.rs  radar.rs  solver.rs  threat.rs
vanguard-interceptor/src/: agent.rs
vanguard-map/: Cargo.toml
vanguard-map/src/: main.rs
vanguard-orchestrator/: Cargo.toml
vanguard-orchestrator/src/: assignment.rs  lib.rs  main.rs  orchestrator.rs  state.rs  subjects.rs  tracks.rs
vanguard-platform/: Cargo.toml
vanguard-platform/src/: handlers.rs  lib.rs  main.rs  message_handler.rs  platform.rs  state.rs  strategy.rs  subjects.rs
vanguard-system-interceptor/: Cargo.toml
vanguard-system-interceptor/src/: cli.rs  main.rs
vanguard-test/src/: main.rs
webui/: Dockerfile  package.json  pnpm-lock.yaml
webui/public/seeker/: README.md
webui/src/: App.tsx  ControlPanel.tsx  SeekerFeed.tsx  TacticalMap.tsx  geo.ts  index.css  types.ts  useNats.ts
