[package]
name = "vanguard-control"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.42"
futures = "0.3"
pathfinding = "4"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.23.3", features = ["v4"] }
vanguard-core = { path = "../vanguard-core" }
