[package]
name = "vanguard-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
vanguard-core = { path = "../vanguard-core" }

async-nats = "0.42"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
